Fix postman run workflow tests (1)